--- a/2-Regressor-Training.ipynb
+++ b/2-Regressor-Training.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,9 +57,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Already existent data directory  data-Example1-Pput .\n"
+     ]
+    }
+   ],
    "source": [
     "Name_Dict = init_Exp2('config_Pput.txt')\n",
     "\n",
@@ -84,9 +92,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Following outliers were detected: ID: ['BGSPL14g_19_a'], Value: [[50.13234789]]\n",
+      "Categorization of expression.\n",
+      "The expression values were sorted into the following bins: [ 0.2178722  16.5660553  24.76999231 35.15239853]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>level_0</th>\n",
+       "      <th>index</th>\n",
+       "      <th>Strain ID</th>\n",
+       "      <th>Sequence</th>\n",
+       "      <th>Promoter Activity</th>\n",
+       "      <th>Sequence_label-encrypted</th>\n",
+       "      <th>Sequence_letter-encrypted</th>\n",
+       "      <th>GC-content</th>\n",
+       "      <th>Promoter Activity_ML</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>BG14g</td>\n",
+       "      <td>[[0, 0, 1, 0], [0, 1, 0, 0], [0, 1, 0, 0], [0,...</td>\n",
+       "      <td>35.057893</td>\n",
+       "      <td>[2, 1, 1, 1, 0, 3, 3, 2, 0, 1, 0, 0, 2, 2, 1, ...</td>\n",
+       "      <td>GCCCATTGACAAGGCTCTCGCGGCCAGGTATAATTGCACG</td>\n",
+       "      <td>0.575</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>12</td>\n",
+       "      <td>12</td>\n",
+       "      <td>BGSPL14g_01_a</td>\n",
+       "      <td>[[0, 0, 1, 0], [0, 1, 0, 0], [0, 1, 0, 0], [0,...</td>\n",
+       "      <td>2.185554</td>\n",
+       "      <td>[2, 1, 1, 1, 0, 0, 3, 2, 0, 1, 0, 0, 2, 2, 1, ...</td>\n",
+       "      <td>GCCCAATGACAAGGCTCTCGCGGCCAGGTATAATTGCACG</td>\n",
+       "      <td>0.575</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>22</td>\n",
+       "      <td>22</td>\n",
+       "      <td>BGSPL14g_01_c</td>\n",
+       "      <td>[[0, 0, 1, 0], [0, 1, 0, 0], [0, 1, 0, 0], [0,...</td>\n",
+       "      <td>1.383577</td>\n",
+       "      <td>[2, 1, 1, 1, 0, 1, 3, 2, 0, 1, 0, 0, 2, 2, 1, ...</td>\n",
+       "      <td>GCCCACTGACAAGGCTCTCGCGGCCAGGTATAATTGCACG</td>\n",
+       "      <td>0.600</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   level_0  index      Strain ID  \\\n",
+       "0        0      0          BG14g   \n",
+       "1       12     12  BGSPL14g_01_a   \n",
+       "2       22     22  BGSPL14g_01_c   \n",
+       "\n",
+       "                                            Sequence  Promoter Activity  \\\n",
+       "0  [[0, 0, 1, 0], [0, 1, 0, 0], [0, 1, 0, 0], [0,...          35.057893   \n",
+       "1  [[0, 0, 1, 0], [0, 1, 0, 0], [0, 1, 0, 0], [0,...           2.185554   \n",
+       "2  [[0, 0, 1, 0], [0, 1, 0, 0], [0, 1, 0, 0], [0,...           1.383577   \n",
+       "\n",
+       "                            Sequence_label-encrypted  \\\n",
+       "0  [2, 1, 1, 1, 0, 3, 3, 2, 0, 1, 0, 0, 2, 2, 1, ...   \n",
+       "1  [2, 1, 1, 1, 0, 0, 3, 2, 0, 1, 0, 0, 2, 2, 1, ...   \n",
+       "2  [2, 1, 1, 1, 0, 1, 3, 2, 0, 1, 0, 0, 2, 2, 1, ...   \n",
+       "\n",
+       "                  Sequence_letter-encrypted  GC-content Promoter Activity_ML  \n",
+       "0  GCCCATTGACAAGGCTCTCGCGGCCAGGTATAATTGCACG       0.575                    2  \n",
+       "1  GCCCAATGACAAGGCTCTCGCGGCCAGGTATAATTGCACG       0.575                    0  \n",
+       "2  GCCCACTGACAAGGCTCTCGCGGCCAGGTATAATTGCACG       0.600                    0  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "SeqDat = Data_Src_Load(Name_Dict)\n",
     "SeqDat.head(3)"
@@ -105,16 +222,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Load existing Train-Test split data-Example1-Pput/20210430_Example1-Pput_3_TrainTest-Data.pkl.\n"
+     ]
+    }
+   ],
    "source": [
     "# You can generate a new train-test split or use an existing file. \n",
     "# If the ML_Date is from the current date, it is assumed you generate a new regressor\n",
     "# If another ML_Date than the current date is chosen, an existing train-test division is loaded\n",
     "# The identifier is based on the date from the corresponding machine learning training.\n",
     "# True generates a new split, False loads an existing split\n",
-    "GenSplit = True if ML_Date == time.strftime('%Y%m%d') else False\n",
+    "TrainTest_File = os.path.join(Data_Folder, '{}_{}_{}_TrainTest-Data.pkl'.format(ML_Date, File_Base, Response_Value))\n",
+    "GenSplit = True if ML_Date == time.strftime('%Y%m%d') and not os.path.isfile(TrainTest_File) else False\n",
     "if GenSplit:\n",
     "    print('new train-test')\n",
     "    Measure_Name = ['{}_ML'.format(MeasName) for MeasName in Y_Col_Name]\n",
@@ -138,7 +264,6 @@
     "\n",
     "    print('Train and test data stored as: {}'.format(TrainTest_File))\n",
     "else:\n",
-    "    TrainTest_File = os.path.join(Data_Folder, '{}_{}_{}_TrainTest-Data.pkl'.format(ML_Date, File_Base, Response_Value))\n",
     "    TrainTest_Data = pickle.load(open(TrainTest_File,'rb'))\n",
     "    SeqTrain, SeqTest = TrainTest_Data['Train'], TrainTest_Data['Test']\n",
     "    print('Load existing Train-Test split {}.'.format(TrainTest_File))"
@@ -157,9 +282,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Normalization: False\n"
+     ]
+    }
+   ],
    "source": [
     "# standardization step, omit for CART approaches by setting variable 'Data_Standard' to 'False'\n",
     "# Target for classification cannot be normalized\n",
@@ -200,9 +333,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting new SV-ML training with Classification for Promoter Activity_ML\n",
+      "Training run time: 111 sec\n",
+      "Estimator hyperparameter:  <bound method BaseEstimator.get_params of SVC(C=1000.0, gamma=0.20691380811147903)>\n"
+     ]
+    }
+   ],
    "source": [
     "# Number of independent promoter library measurements\n",
     "Regressor_Best = dict()\n",
