--- a/3-Regressor-Performance.ipynb
+++ b/3-Regressor-Performance.ipynb
@@ -348,12 +348,14 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "# if ML_Regressor in ['RF']:\n",
+    "if ML_Regressor in ['RF']:\n",
     "    # Pull out one tree from the forest\n",
-    "    tree = ML_Best[Measure_Name][20]\n",
+    "    tree = ML_Best[Measure_Name][1]\n",
     "\n",
     "    # Export the image to a dot file\n",
     "    DotData = export_graphviz(tree, rounded = True, precision = 1)\n",
