--- a/Protocol/Analysis-CrossLibraries.ipynb
+++ b/Protocol/Analysis-CrossLibraries.ipynb
@@ -73,7 +73,6 @@
     "unp_f1Std = mydf[Y2Name][-myunpub:].astype(float).values\n",
     "unp_f1CV = mydf[Y3Name][-myunpub:].astype(float).values\n",
     "\n",
-    "XName = '# Features'\n",
     "YName = 'Sum Top 3 FI'\n",
     "XName = 'Avg Seq Dist'\n",
     "\n",
@@ -81,6 +80,7 @@
     "Tst_AvSqDist = mydf[XName][-mytst-myunpub:-myunpub].astype(float).values\n",
     "unp_AvSqDist = mydf[XName][-myunpub:].astype(float).values\n",
     "\n",
+    "XName = '# Features'\n",
     "FNum = mydf[XName][:-mytst-myunpub].values\n",
     "FImp = mydf[YName][:-mytst-myunpub].values \n",
     "Tst_FNum = mydf[XName][-mytst-myunpub:-myunpub].values \n",
@@ -135,7 +135,7 @@
     "plt.ylabel('F1 Score')\n",
     "R2legend_orig = 'Published libraries'\n",
     "R2legend_test = 'Library cuts'\n",
-    "plt.legend([R2legend_orig, R2legend_test], loc='lower center')\n",
+    "plt.legend([R2legend_orig, R2legend_test], loc='upper right')\n",
     "\n",
     "FigName = 'FeatNum-vs-F1Avg.{}'.format(FType)\n",
     "# plt.savefig(FigName, bbox_inches='tight', format=FType)\n",
@@ -168,15 +168,15 @@
     "# plt.plot(X, X*m+n, 'k:')\n",
     "plt.scatter(FNum, FImp, s=100, marker='X')\n",
     "# annotating scatter\n",
-    "xshift = [5,5,5,5,-15,-15,-15] # [5,5,-80,5,-120,-135,-66]\n",
+    "xshift = [10,-25,-25,15,-25,-25,-25] # [5,5,-80,5,-120,-135,-66]\n",
     "yshift = [0,0,.01,0,0,-.01,0] # [0,-0.01,.01,0,-.0075,-.01,-.025]\n",
     "for Indx,Source in enumerate(Ori_Label): # mydf.columns[1:-mytst]\n",
     "    plt.text(FNum[Indx]+xshift[Indx], FImp[Indx]+yshift[Indx], Source)\n",
     "\n",
     "# adding sequence subsets\n",
     "plt.scatter(Tst_FNum, Tst_FImp, s=100, c='r', marker='x')\n",
-    "tstxshift = [8,8,-15] # [5,5,-80]\n",
-    "tstyshift = [0,0,0] # [0,-0.01,.01]\n",
+    "tstxshift = [15,15,15] # [5,5,-80]\n",
+    "tstyshift = [0,-.02,0] # [0,-0.01,.01]\n",
     "for Indx,Source in enumerate(Tst_Label): #mydf.columns[-mytst:]\n",
     "    plt.text(Tst_FNum[Indx]+tstxshift[Indx], Tst_FImp[Indx]+tstyshift[Indx], Source)\n",
     "\n",
