modified exp2ipynb folder for local module load

--- a/Analysis/0-Workflow.ipynb
+++ b/Analysis/0-Workflow.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The ExpressionExpert.ipynb"
+    "# The Exp2Ipynb"
    ]
   },
   {
@@ -13,16 +13,15 @@
    "source": [
     "## Introduction\n",
     "\n",
-    "The ExpressionExpert.ipynb is a Jupyter notebook for the analysis of promoter libraries. The user uploads one or several sequence libraries with associated expression values. The notebook guides:\n",
+    "The expression expert notebook (Exp2Ipynb) is a collection of Jupyter notebooks for the analysis of promoter libraries. Promoter libraries with single or multiple sequence libraries with associated expression values can be analysed. The notebook guides:\n",
     " 1. the statistical analysis, \n",
-    " 2. the training of a random forest regressor,\n",
+    " 2. the training of machine learning estimators (regression, classification, random forest, gradient boosting trees, support vector machines)\n",
     " 3. the evaluation of the regressor performance,\n",
-    " 4. the set-up of a synthetic promoter library within the experimental exploration region, and \n",
-    " 5. the selection of new promoters with defined expression.\n",
+    " 4. the optimization procedure to select new promoters with defined expression.\n",
     " \n",
     "--- \n",
     "## Workflow initialization\n",
-    "The workflow is distributed in different notebooks. However, many functions call the same file and will store results in a common directory. In the following, a project directory is generated in combination with the file name of the promoter library. These informations are stored in the 'config.txt' file for all other notebooks. The config-file is evaluated in dedicated cells in the start of all Notebooks. Once initialized, you can also rename plots or names by changing the names in the config-file and then re-running notebooks 1-5.\n",
+    "The workflow is distributed in different notebooks. However, many functions call the same file and will store results in a common directory. In the following, a project directory is generated in combination with the file name of the promoter library. These informations are stored in the 'config.txt' file for all other notebooks. The config-file is evaluated in dedicated cells in the start of all Notebooks. Once initialized, you can also rename plots or names by changing the names in the config-file and then re-running notebooks 1-4.\n",
     "\n",
     "The code cell below generates a `config.txt` file. The important sensible user input is labeled between the '#' signs. Once you are fine with a given config-file, you can rename it and use the new config-file name in the approriate positions where the config-file is loaded in the other Notebooks.\n",
     "\n",
@@ -30,9 +29,7 @@
     " * **Provide information starting from `Data_File` until `Synth_Seq_MaxNumber`.**\n",
     "\n",
     "*Example: <br>\n",
-    "An example file for a promoter library in* Pseudomonas putida *KT2440 is provided.* <br>\n",
-    "Data_File = 'Example1-Pput.csv'\n",
-    "\n",
+    "An example file for a promoter library in* Pseudomonas putida *KT2440 is provided.*\n",
     "---\n",
     "**Author: Ulf Liebal** <br>\n",
     "**Institution: Institute of Applied Microbiology, RWTH Aachen** <br>\n",
@@ -56,17 +53,17 @@
     "# example input: 'Example1-Pput.csv'\n",
     "Data_File = 'Example1-Pput.csv' \n",
     "# Sequence column name\n",
-    "Sequence = 'Sequence(5-3)'\n",
+    "Sequence = 'Sequence'\n",
     "# column name of expression activity\n",
     "# example input: ['Promoter Activity'], ['Ecol Promoter Activity', 'Ptai Promoter Activity'],\n",
     "# Make sure all entries are within square brackets and hyphens\n",
-    "Y_Col_Name = ['GFP relative activity']\n",
+    "Y_Col_Name = ['Promoter Activity']\n",
     "# Promoter ID column name\n",
     "# 'Strain ID'\n",
-    "ID_Col_Name = 'Name'\n",
+    "ID_Col_Name = 'Strain ID'\n",
     "# expression unit for plots\n",
     "# example: '$\\mu$M(GFP)/(gCDW*h)' 'GFP intensity'\n",
-    "Expression_Unit = 'GFP Activity'\n",
+    "Expression_Unit = 'GFP intensity'\n",
     "# Response value engineering\n",
     "# The machine learning to the expression can either take place on the original values, standardized values with zero mean and unit variance, or categorized expression values\n",
     "# Response_Value = 0: standardized expression with zero mean and unit variance\n",
@@ -85,14 +82,8 @@
     "# for X-Host 'GCCCATTGACAAGGCTCTCGCGGCCAGGTATAATTGCACG'\n",
     "RefSeq = ''\n",
     "# Machine learning approach for regression\n",
-    "# choose RFR: random forest regression, GBR: gradient boosting regression, SVR: support vector regression\n",
-    "ML_Regressor = 'RFR'\n",
-    "# Kernal and function based machine learning approaches like SVM and artificial neural networks, require data standardization. Correlation and regression trees, including random forest, do not benefit from data standardization.\n",
-    "# Set variable with Boolean for data standardization\n",
-    "Data_Standard = False\n",
-    "# if previously a synthetic library was generated it is stored under a generic name with only the date as variable\n",
-    "# give synthetic library date to load file with default naming\n",
-    "SynLib_Date = time.strftime('%Y%m%d')\n",
+    "# choose RF(R/C): random forest regression/classification, GB(R/C): gradient boosting regress/class, SV(R/C): support vector regress/class\n",
+    "ML_Regressor = 'RFC'\n",
     "# Date for the random forest regression. \n",
     "ML_Date = time.strftime('%Y%m%d')\n",
     "# Test set cut-off, fraction of data removed from the original set to be used for quality assessment\n",
@@ -101,7 +92,7 @@
     "# the 'Sequence_Distance_cutoff' determines how distant are sequences allowed to be different from the most common sequence reference\n",
     "# The statistical analysis gives a histogram of sequence distances, take an appropriate value from there\n",
     "# in Example1-Pput: 0.11\n",
-    "Sequence_Distance_cutoff = .9\n",
+    "Sequence_Distance_cutoff = .2\n",
     "# not all positions might be sampled with all nucleotides, the parameter 'Entropy_cutoff' determines the minimum position diversity\n",
     "# The position diversity entropy-bargraph gives an indication on the right parameter choice.\n",
     "# in Example1-Pput: 0.15\n",
@@ -215,10 +206,10 @@
     "\n",
     "---\n",
     "\n",
-    "## Generation of random sequences in the exploration space\n",
-    "The generation of random sequences covered by the experimentally tested sequences serves to delineate the whole expected range of expression strength and to select for novel promoters with defined activity. The sequence exploration space is defined by the distance of nucleotide exchanges to a reference sequence and the information content for each nucleotide on all positions. Only if a position along the sequence has a sufficient information content can the conclusion be drawn that enough input diversity was present to learn a correct output mapping. The output mapping is determined with the position specific entropy and the user decides about the threshold of the entropy such that a position is being used for random sequence construction. The reference sequence can be pre-determined by the user or automatically assembled from the most common nucleotides at each position. The user has to identify the appropriate distance that the random sequences are allowed to be different from the reference. If the available sequences within the allowed exploration space is smaller than a threshold, all sequences will be generated, otherwise random sequences will be generated that satisfy the exploration space conditions. \n",
+    "## Identification of new sequences with defined activity\n",
+    "The notebook allows to predict new sequences with defined activity. For an estimator generated via regression, sequences that minimize the distance to a target activity are searched, whereas for an estimator based on classification, the distance with respect to reference sequences is minimized, given expression in the target bin. Sequences already present in the library are ignored.\n",
     "\n",
-    "[4-Exploration-Space.ipynb](./4-Exploration-Space.ipynb)\n"
+    "[4-Promoter-Prediction.ipynb](./4-Promoter-Prediction.ipynb)\n"
    ]
   },
   {
@@ -227,67 +218,45 @@
    "source": [
     "## Software dependencies\n",
     "\n",
-    "CPython 3.7.6<br>\n",
-    "IPython 7.12.0<br>\n",
+    "CPython<br>\n",
+    "Python: 3.9.1<br>\n",
+    "IPython 7.19.0<br>\n",
     "<br>\n",
-    "ipywidgets 7.5.1<br>\n",
-    "matplotlib 3.1.3<br>\n",
-    "numpy 1.18.1<br>\n",
-    "pandas 1.0.1<br>\n",
-    "sklearn 0.22.1<br>\n",
-    "scipy 1.4.1<br>\n",
-    "logomaker 0.8<br>\n",
-    "joblib 0.14.1<br>\n",
+    "matplotlib: 3.3.4<br>\n",
+    "numpy     : 1.19.2<br>\n",
+    "joblib    : 0.14.1<br>\n",
+    "pandas    : 1.2.1<br>\n",
+    "openpyxl  : 3.0.6<br>\n",
+    "sklearn   : 0.24.1<br>\n",
+    "scipy     : 1.6.0<br>\n",
+    "logomaker : 0.8<br>\n",
+    "pydot     : 1.4.1<br>\n",
     "<br>\n",
-    "compiler   : GCC 7.3..<br>\n",
-    "system     : Linux<br>\n",
-    "release    : 5.3.0-53-generic<br>\n",
-    "machine    : x86_64<br>\n",
-    "processor  : x86_64<br>\n",
-    "CPU cores  : 8<br>\n",
-    "interpreter: 64bit<br>\n",
-    "\n",
-    "%load_ext watermark\n",
-    "%watermark -v -m -p ipywidgets,matplotlib,numpy,pandas,sklearn,scipy,logomaker"
+    "Compiler    : GCC 7.3.0<br>\n",
+    "OS          : Linux<br>\n",
+    "Release     : 5.4.0-74-generic<br>\n",
+    "Machine     : x86_64<br>\n",
+    "Processor   : x86_64<br>\n",
+    "CPU cores   : 8<br>\n",
+    "Architecture: 64bit<br>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'watermark'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-e0cb7eb32888>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mget_ipython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun_line_magic\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'load_ext'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'watermark'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mget_ipython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun_line_magic\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'watermark'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'-v -m -p ipywidgets,matplotlib,numpy,pandas,sklearn,scipy,logomaker'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/.local/lib/python3.9/site-packages/IPython/core/interactiveshell.py\u001b[0m in \u001b[0;36mrun_line_magic\u001b[0;34m(self, magic_name, line, _stack_depth)\u001b[0m\n\u001b[1;32m   2325\u001b[0m                 \u001b[0mkwargs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'local_ns'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_local_scope\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstack_depth\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2326\u001b[0m             \u001b[0;32mwith\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbuiltin_trap\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2327\u001b[0;31m                 \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2328\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2329\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<decorator-gen-57>\u001b[0m in \u001b[0;36mload_ext\u001b[0;34m(self, module_str)\u001b[0m\n",
-      "\u001b[0;32m~/.local/lib/python3.9/site-packages/IPython/core/magic.py\u001b[0m in \u001b[0;36m<lambda>\u001b[0;34m(f, *a, **k)\u001b[0m\n\u001b[1;32m    185\u001b[0m     \u001b[0;31m# but it's overkill for just that one bit of state.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    186\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mmagic_deco\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 187\u001b[0;31m         \u001b[0mcall\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mlambda\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    188\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    189\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mcallable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/.local/lib/python3.9/site-packages/IPython/core/magics/extension.py\u001b[0m in \u001b[0;36mload_ext\u001b[0;34m(self, module_str)\u001b[0m\n\u001b[1;32m     31\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mmodule_str\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m             \u001b[0;32mraise\u001b[0m \u001b[0mUsageError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Missing module name.'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 33\u001b[0;31m         \u001b[0mres\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshell\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mextension_manager\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_extension\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodule_str\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     34\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mres\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'already loaded'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/.local/lib/python3.9/site-packages/IPython/core/extensions.py\u001b[0m in \u001b[0;36mload_extension\u001b[0;34m(self, module_str)\u001b[0m\n\u001b[1;32m     78\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mmodule_str\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0msys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodules\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     79\u001b[0m                 \u001b[0;32mwith\u001b[0m \u001b[0mprepended_to_syspath\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mipython_extension_dir\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 80\u001b[0;31m                     \u001b[0mmod\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mimport_module\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodule_str\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     81\u001b[0m                     \u001b[0;32mif\u001b[0m \u001b[0mmod\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__file__\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstartswith\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mipython_extension_dir\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     82\u001b[0m                         print((\"Loading extensions from {dir} is deprecated. \"\n",
-      "\u001b[0;32m~/anaconda3/envs/exp2ipynb/lib/python3.9/importlib/__init__.py\u001b[0m in \u001b[0;36mimport_module\u001b[0;34m(name, package)\u001b[0m\n\u001b[1;32m    125\u001b[0m                 \u001b[0;32mbreak\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    126\u001b[0m             \u001b[0mlevel\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 127\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0m_bootstrap\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_gcd_import\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mlevel\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpackage\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlevel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    128\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    129\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/exp2ipynb/lib/python3.9/importlib/_bootstrap.py\u001b[0m in \u001b[0;36m_gcd_import\u001b[0;34m(name, package, level)\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/exp2ipynb/lib/python3.9/importlib/_bootstrap.py\u001b[0m in \u001b[0;36m_find_and_load\u001b[0;34m(name, import_)\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/exp2ipynb/lib/python3.9/importlib/_bootstrap.py\u001b[0m in \u001b[0;36m_find_and_load_unlocked\u001b[0;34m(name, import_)\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'watermark'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext watermark\n",
-    "%watermark -v -m -p ipywidgets,matplotlib,numpy,pandas,sklearn,scipy,logomaker"
+    "%watermark -v -m -p matplotlib,numpy,joblib,pandas,openpyxl,sklearn,scipy,logomaker,pydot"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python37",
+   "display_name": "exp2ipynb",
    "language": "python",
-   "name": "python37"
+   "name": "exp2ipynb"
   },
   "language_info": {
    "codemirror_mode": {
