--- a/Analysis/1-Statistical-Analysis.ipynb
+++ b/Analysis/1-Statistical-Analysis.ipynb
@@ -39,7 +39,10 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "from Exp2Ipynb import init_Exp2, Data_Src_Load, make_DataDir, ExpressionScaler, Sequence_Conserved_Adjusted, Insert_row_, ExpressionStrength_HeatMap, df_HeatMaps, ExpressionVariation_HeatMap, Sequence_Ref_DiffSum, Sequence_Dist_DiffSum, generate_distances, ExpressionMean_ttest\n",
+    "import sys\n",
+    "sys.path.append('..')\n",
+    "from exp2ipynb import *\n",
+    "\n",
     "%matplotlib inline"
    ]
   },
@@ -110,27 +113,8 @@
     "\n",
     "### Position entropy analysis\n",
     "\n",
-    "On each position the entropy is calculated to assess how much nucleotide diversity has been sampled on each position.  \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# standardization step, omit for CART approaches by setting variable 'Data_Standard' to 'False'\n",
-    "# if eval(Name_Dict['Data_Standard']):\n",
-    "#     SeqDat, Expr_Scaler = ExpressionScaler(SeqDat, Name_Dict)\n",
+    "On each position the entropy is calculated to assess how much nucleotide diversity has been sampled on each position.  \n",
     "\n",
-    "# removing non-informative positions where no base diversity exists, base one hot encoding\n",
-    "SeqDat_Hadj, Positions_removed, PSEntropy = Sequence_Conserved_Adjusted(SeqDat, Name_Dict, Entropy_cutoff=0)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Visualization of statistical properties\n",
     "\n",
     "The standardized expression is used for visualization of the average and variance of expression for each nucleotide on each position (Heat map visualization of nucleotide-position expression). A histogram of the sequence differences is generated. Here, the frequency of sequences with a given number of nucleotide exchanges (in %) relative to the first sequence is plotted (Histogram of sequence distances). The sampled nucleotide diversity on each sequence position is plotted (Position entropy lollipop). A histogram showing the number of sequences over the expression range with a binning of ten is shown (Expression strength histogram).\n",
@@ -146,6 +130,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# standardization step, omit for CART approaches by setting variable 'Data_Standard' to 'False'\n",
+    "# if eval(Name_Dict['Data_Standard']):\n",
+    "#     SeqDat, Expr_Scaler = ExpressionScaler(SeqDat, Name_Dict)\n",
+    "\n",
+    "# removing non-informative positions where no base diversity exists, base one hot encoding\n",
+    "SeqDat_Hadj, Positions_removed, PSEntropy = Sequence_Conserved_Adjusted(SeqDat, Name_Dict, Entropy_cutoff=0)\n",
+    "\n",
     "Measurements = int(Name_Dict['Library_Expression'])\n",
     "SeqPos = len(PSEntropy)\n",
     "# The mean values of position dependent expression contribution are stored in an array to compute the standard deviation among all measurements\n",
