--- a/Analysis/3-Regressor-Performance.ipynb
+++ b/Analysis/3-Regressor-Performance.ipynb
@@ -35,7 +35,9 @@
     "import joblib\n",
     "import pickle\n",
     "from math import sqrt\n",
-    "from Exp2Ipynb import init_Exp2, Data_Src_Load, split_train_test, list_onehot, Insert_row_, my_CrossValScore, make_DataDir, largest_indices\n",
+    "import sys\n",
+    "sys.path.append('..')\n",
+    "from exp2ipynb import *\n",
     "from sklearn.model_selection import cross_val_score, GroupShuffleSplit\n",
     "from sklearn.metrics import r2_score, mean_squared_error, make_scorer, plot_confusion_matrix, classification_report, f1_score, matthews_corrcoef\n",
     "from sklearn.tree import export_graphviz\n",
