del figures, add latex zip

--- a/Article/AdditionalData/Analysis-CrossLibraries.ipynb
+++ b/Article/AdditionalData/Analysis-CrossLibraries.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Performance analysis across libraries"
+    "# Performance analysis across libraries\n",
+    "\n",
+    "This notebook loads the supplementary data with the seven libraries in the library comparison investigation and regenerates the subfigures of Figure 3 in the Manuscript. An additional, not yet published data set is loaded and colored in black. Saving of the generated plots is deactivated, but can be activated by uncommenting the respective `plt.savefig(...)` line."
    ]
   },
   {
