tests Zhao 30 and 50 nt

--- a/Article/AdditionalData/Analysis-CrossLibraries.ipynb
+++ b/Article/AdditionalData/Analysis-CrossLibraries.ipynb
@@ -51,8 +51,8 @@
     "x1 = pd.ExcelFile(myxls)\n",
     "mydf = x1.parse('RFClassComp')\n",
     "Ori_Label = ['a','b','c','d','e','f','g']\n",
-    "Tst_Label = ['h','i','k']\n",
-    "mytst = 3\n",
+    "Tst_Label = ['c1','c2','d1','d2','d3']\n",
+    "mytst = 5\n",
     "myunpub = 2\n",
     "\n",
     "XName = '# Train'\n",
@@ -120,8 +120,8 @@
     "\n",
     "# plt.scatter(TstF_Num, Tst_f1Mean, s=100, c='r', marker='x')\n",
     "plt.errorbar(Tst_FNum, Tst_f1Mean, Tst_f1Std, fmt='X', color='r', ecolor='pink', elinewidth=5, capsize=0)\n",
-    "tstxshift = [5,5,5] # [5,5,-80]\n",
-    "tstyshift = [0,0,0] # [0,-0.01,.01]\n",
+    "tstxshift = [5,5,5,5,5] # [5,5,-80]\n",
+    "tstyshift = [0,0,0,0,0] # [0,-0.01,.01]\n",
     "for Indx,Source in enumerate(Tst_Label): #mydf.columns[-mytst:]\n",
     "    plt.text(Tst_FNum[Indx]+tstxshift[Indx], Tst_f1Mean[Indx]+tstyshift[Indx], Source)\n",
     "\n",
@@ -134,7 +134,7 @@
     "plt.legend([R2legend_orig, R2legend_test], loc='upper right')\n",
     "\n",
     "FigName = 'FeatNum-vs-F1Avg.{}'.format(FType)\n",
-    "# plt.savefig(FigName, bbox_inches='tight', format=FType)\n",
+    "plt.savefig(FigName, bbox_inches='tight', format=FType)\n",
     "plt.show()"
    ]
   },
@@ -171,8 +171,8 @@
     "\n",
     "# adding sequence subsets\n",
     "plt.scatter(Tst_FNum, Tst_FImp, s=100, c='r', marker='x')\n",
-    "tstxshift = [15,15,15] # [5,5,-80]\n",
-    "tstyshift = [0,-.02,0] # [0,-0.01,.01]\n",
+    "tstxshift = [15,15,15,15,15] # [5,5,-80]\n",
+    "tstyshift = [0,-.02,-.02,-.02,0] # [0,-0.01,.01]\n",
     "for Indx,Source in enumerate(Tst_Label): #mydf.columns[-mytst:]\n",
     "    plt.text(Tst_FNum[Indx]+tstxshift[Indx], Tst_FImp[Indx]+tstyshift[Indx], Source)\n",
     "\n",
@@ -213,8 +213,8 @@
     "    plt.text(TrainSet[Indx]+xshift[Indx], f1CV[Indx]+yshift[Indx], Source)\n",
     "\n",
     "plt.scatter(Tst_TrainSet, Tst_f1CV, c='r', s=100, marker='x')\n",
-    "tstxshift = [-125,75,50]\n",
-    "tstyshift = [-0.01,-.01,0]\n",
+    "tstxshift = [-125,75,50,75,50]\n",
+    "tstyshift = [-0.01,-.01,0,-.01,0]\n",
     "for Indx,Source in enumerate(Tst_Label):\n",
     "    plt.text(Tst_TrainSet[Indx]+tstxshift[Indx], Tst_f1CV[Indx]+tstyshift[Indx], Source)\n",
     "\n",
@@ -228,7 +228,7 @@
     "# plt.legend([R2legend_orig, R2legend_test])\n",
     "plt.style.use('seaborn-paper')\n",
     "FigName = 'SampleTrain-vs-f1CV.{}'.format(FType)\n",
-    "# plt.savefig(FigName, bbox_inches='tight', format=FType)\n",
+    "plt.savefig(FigName, bbox_inches='tight', format=FType)\n",
     "\n",
     "plt.show()\n"
    ]
@@ -258,8 +258,8 @@
     "    plt.text(AvSqDist[Indx]+xshift[Indx], f1CV[Indx]+yshift[Indx], Source)\n",
     "\n",
     "plt.scatter(Tst_AvSqDist, Tst_f1CV, c='r', s=100, marker='x')\n",
-    "tstxshift = [.01,.01,.01]\n",
-    "tstyshift = [0,0,0]\n",
+    "tstxshift = [.01,.01,.01,.01,.01]\n",
+    "tstyshift = [0,0,0,0,0]\n",
     "for Indx,Source in enumerate(Tst_Label):\n",
     "    plt.text(Tst_AvSqDist[Indx]+tstxshift[Indx], Tst_f1CV[Indx]+tstyshift[Indx], Source)\n",
     "\n",
@@ -273,7 +273,7 @@
     "# plt.legend([R2legend_orig, R2legend_test])\n",
     "plt.style.use('seaborn-paper')\n",
     "FigName = 'SeqDiv-vs-f1CV.{}'.format(FType)\n",
-    "# plt.savefig(FigName, bbox_inches='tight', format=FType)\n",
+    "plt.savefig(FigName, bbox_inches='tight', format=FType)\n",
     "\n",
     "plt.show()\n",
     "# print('F1 CoV change d-k: {:.2f}%'.format(Tst_f1CV[2]/f1CV[3]*100))\n",
